# agentsave

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bootstrap-dashboard-secret.yml  dashboard-tests.yml  inferroute-tests.yml  playwright.yml  publish.yml  release.yml  sdk-tests.yml
agentsave/: __init__.py
agentsave/adapters/: autogen.py  base.py  crewai.py  langchain.py  langgraph.py  smolagents.py
agentsave/cli/: main.py
agentsave/core/: budget.py  context_filter.py  early_exit.py  models.py  supervisor.py  token_counter.py
agentsave/telemetry/: client.py  models.py
benchmarks/: accuracy.py  report.py  runner.py  tasks.py
docs/superpowers/plans/: 2026-06-24-sp0-benchmark-and-real-tests.md  2026-06-24-sp1-agentsave-dashboard.md  2026-06-24-sp2-agentsave-ui.md  2026-06-24-sp3-agentsave-inferroute.md
docs/superpowers/specs/: 2026-06-24-agentsave-full-build-design.md
tests/adapters/: test_autogen.py  test_autogen_integration.py  test_base.py  test_crewai.py  test_crewai_integration.py  test_langchain.py  test_langchain_integration.py  test_langgraph.py  test_langgraph_integration.py  test_smolagents.py  test_smolagents_integration.py
tests/benchmarks/: test_accuracy.py  test_report.py  test_runner.py
tests/cli/: test_main.py
tests/core/: test_budget.py  test_context_filter.py  test_early_exit.py  test_models.py  test_supervisor.py  test_token_counter.py
tests/integration/: test_benchmark.py
tests/telemetry/: test_client.py
