[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentsave"
version = "0.1.0"
description = "Save 30% on AI agent costs. One line of code. No accuracy loss."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "scikit-learn>=1.4.0",
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.3.0", "langchain-core>=0.3.0"]
autogen = ["pyautogen>=0.4.0"]
crewai = ["crewai>=0.80.0"]
smolagents = ["smolagents>=1.10.0"]
all = ["agentsave[langchain,autogen,crewai,smolagents]"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
]

[project.scripts]
agentsave = "agentsave.cli.main:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
